--- a/support.html
+++ b/support.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="da">
 <head>
-    <!-- Copy head section from index.html -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <button class="burger-menu" aria-label="Open Menu">
+                <img src="assets/burger.svg" alt="Menu" height="17">
+            </button>
+            <a href="/" class="logo">
+                <img src="assets/Logo_nav_white.svg" alt="Radar Hub Logo">
+            </a>
+            <div class="nav-group">
+                <ul class="nav-menu">
+                    <li><a href="hub.html">vores hub</a></li>
+                    <li><a href="support.html">støtte os</a></li>
+                    <li><a href="about.html">om os</a></li>
+                    <li><a href="contact.html">kontakt</a></li>
+                </ul>
+                <a href="#" class="profile-icon">
+                    <img src="assets/profile_w.svg" alt="Profile">
+                </a>
+            </div>
+        </nav>
+      </header>
+
     <!-- Copy header from index.html -->
-    <main>
-        <h1>Støtte Os</h1>
+    <main class="error-page">
+        <h1>404 - Side ikke fundet</h1>
         <!-- Add content -->
     </main>
     <!-- Footer will be loaded via component -->
