fixed responsive code to better match between subpages on index, contact, about. should be finalized now.

--- a/contact.html
+++ b/contact.html
@@ -54,8 +54,13 @@
                     </div>
                 </div>
                 
-                <div class="contact-image">
-                    <img src="assets/Radar.webp" alt="Radar building">
+                <div class="contact-iframe">
+                    <iframe 
+                        src="https://my.matterport.com/show/?m=BkCuxx9rm7w&hl=1&play=1&sr=-.02,-.6&ss=198&hr=0" 
+                        allowfullscreen 
+                        loading="lazy" 
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
                 </div>
             </div>
         </section>
