tried to fix_performance issues + Fixed background image for smaller screens  + tried to improve embedded content on kontakt, but that was complex and mostly an issue of the external js code quality etc.

--- a/hub.html
+++ b/hub.html
@@ -3,7 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Primary Meta Tags -->
     <title>Hub - Radar Hub</title>
+    <meta name="title" content="Hub - Radar Hub">
+    <meta name="description" content="Udforsk Radar Hub's fællesskab - Del ideer, stem på events og vær en del af Aarhus' kulturelle scene">
+    <meta name="keywords" content="radar hub, aarhus kultur, musik community, kulturelt fællesskab">
+    <meta name="author" content="Radar Hub">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://radarhub.peterhalldahl.dk/hub">
+    <meta property="og:title" content="Hub - Radar Hub">
+    <meta property="og:description" content="Udforsk Radar Hub's fællesskab - Del ideer, stem på events og vær en del af Aarhus' kulturelle scene">
+    <meta property="og:image" content="https://your-domain.com/path-to-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://radarhub.peterhalldahl.dk/hub">
+    <meta property="twitter:title" content="Hub - Radar Hub">
+    <meta property="twitter:description" content="Udforsk Radar Hub's fællesskab - Del ideer, stem på events og vær en del af Aarhus' kulturelle scene">
+    <meta property="twitter:image" content="https://your-domain.com/path-to-image.jpg">
+
     <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
     <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
