--- a/popular-posts.html
+++ b/popular-posts.html
@@ -79,6 +79,6 @@
         </article>
     </div>
     <div class="see-more-wrapper">
-        <a class="see-more">Se mere</a>
+        <a href="/path-to-destination" class="see-more">Se mere</a>
     </div>
 </section> 
