fixed, html markup checker errors, favicon errors, updated with sitemap and updated robot.txt

--- a/hub.html
+++ b/hub.html
@@ -25,12 +25,12 @@
     <meta property="twitter:description" content="Udforsk Radar Hub's fællesskab - Del ideer, stem på events og vær en del af Aarhus' kulturelle scene">
     <meta property="twitter:image" content="https://your-domain.com/path-to-image.jpg">
 
-    <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="radar hub" />
-    <link rel="manifest" href="/assets/favicon/site.webmanifest" />
+    <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96"/>
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg"/>
+    <link rel="shortcut icon" href="/assets/favicon/favicon.ico"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png"/>
+    <meta name="apple-mobile-web-app-title" content="radar hub"/>
+    <link rel="manifest" href="/assets/favicon/site.webmanifest"/>
     <link rel="stylesheet" href="https://use.typekit.net/bli1hsx.css">
     <link rel="stylesheet" href="css/style.css">
     <style>
@@ -51,7 +51,7 @@
 </head>
 
 <body>
-<!-- HEADER / NAV -------------------------------------------------------------------------------------------------------------------------------->   
+<!-- HEADER / NAV -->   
     <header>
         <nav>
             <button class="burger-menu" aria-label="Open Menu">
@@ -198,7 +198,7 @@
         <div id="popular-posts-container"></div>
     </main>
 
-<!-- FOOTER -------------------------------------------------------------------------------------------------------------------------------->
+<!-- FOOTER -->
     <footer>
         <div class="footer-about-container">
             <div>
