--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <meta property="twitter:image" content="https://your-domain.com/path-to-image.jpg">
 
     <!-- Favicon stuff (already present) -->
-    <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="radar hub" />
-    <link rel="manifest" href="/assets/favicon/site.webmanifest" />
+    <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg">
+    <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <meta name="apple-mobile-web-app-title" content="radar hub">
+    <link rel="manifest" href="/assets/favicon/site.webmanifest">
     
     <!-- Styles (already present) -->
     <link rel="stylesheet" href="https://use.typekit.net/bli1hsx.css">
@@ -39,7 +39,7 @@
 </head>
 
 <body>
-  <!-- HEADER / NAV -------------------------------------------------------------------------------------------------------------------------------->   
+  <!-- HEADER / NAV -->   
   <header>
     <nav>
         <button class="burger-menu" >
@@ -63,8 +63,8 @@
     </nav>
   </header>
 
-    <!-- MAIN -------------------------------------------------------------------------------------------------------------------------------->
-    <!-- HERO -------------------------------------------------------------------------------------------------------------------------------->
+    <!-- MAIN -->
+    <!-- HERO -->
   <main>
     <section class="hero">
     <div class="hero-background"></div>
@@ -85,7 +85,7 @@
       <span class="artist">@SaraHansen</span>
     </div>
     </section>
-    <!-- SE MERE -------------------------------------------------------------------------------------------------------------------------------->
+    <!-- SE MERE -->
     <div class="arrow-column">
         <h3>Se mere</h3>
         <img src="assets/Arrow_1.svg" alt="arrow" width="24" height="15">
@@ -98,15 +98,15 @@
         <img src="assets/Arrow_1.svg" alt="arrow" width="24" height="15">
     </div>
 
-<!-- IMPACT-------------------------------------------------------------------------------------------------------------------------------->
+<!-- IMPACT -->
     <section class="impact-section">
-      <!-- wrapper ------------------------------------------------------------------------------->
+      <!-- wrapper -->
       <div class="impact-wrapper">
-        <!-- title ------------------------------------------------------------------------------->
+        <!-- title -->
         <div class="impact-title">
           <h1>Hub'en skaber forandring</h1>
         </div>
-        <!-- content (text)--------------------------------------------------------------------------->
+        <!-- content (text) -->
         <div class="impact-content">
           <div class="impact-text">
             <h3>Kreative idéer</h3>
@@ -125,15 +125,15 @@
             <p>Feedback fra kunstnere viser en betydelig stigning i tilfredshed med Radars støtte og muligheder, som hjælper dem med at udvikle deres karriere.</p>
           </div>
         </div>
-        <!-- content (Text)--------------------------------------------------------------------------->
+        <!-- content (Text) -->
       </div>
-      <!-- image ------------------------------------------------------------------------------->
+      <!-- image -->
       <div class="impact-image">
         <img src="assets/Cubes.svg" alt="data illustration" width="458" height="850">
       </div>
     </section>
 
-      <!-- We Provide---------------------------------------------------------------------------------------------------------------------------->
+      <!-- We Provide -->
     <section class="we-provide">
       <div class="provide-grid">
           <div class="left-content">
@@ -163,7 +163,7 @@
       </div>
     </section>
 
-      <!-- Testimonials-------------------------------------------------------------------------------------------------------------------------->
+      <!-- Testimonials -->
     <section class="testimonials">
       <div class="testimonial-container">
           <div class="testimonial-image-wrapper">
@@ -174,20 +174,21 @@
               </div>
           </div>
           <div class="testimonial-content-wrapper">
-              <img src="assets/q_l.svg" alt="Testimonial quote" class="testimonial-quote testimonial-quote-top" width="221.66" height="166.5">
+              <img src="assets/q_l.svg" alt="Testimonial quote" class="testimonial-quote testimonial-quote-top" width="222" height="167">
               <div class="testimonial-text-group">
                   <h1 class="testimonial-heading">Det er første gang, jeg har oplevet et så åbent samarbejde og fællesskab.</h1>
               </div>
-              <img src="assets/q_r.svg" alt="Testimonial quote" class="testimonial-quote testimonial-quote-bottom" width="221.66" height="166.5">
+              <img src="assets/q_r.svg" alt="Testimonial quote" class="testimonial-quote testimonial-quote-bottom" width="222" height="167">
           </div>
       </div>
     </section>
 
-    <!-- Popular posts------------------------------------------------------------------------------------------------------------------------->
+
+    <!-- Popular posts -->
     <div id="popular-posts-container"></div>
   </main>
 
-    <!-- FOOTER ------------------------------------------------------------------------------------------------------------------------------->
+    <!-- FOOTER -->
   <footer>
     <div class="footer-about-container">
       <div>
