removed non-needed support.html

--- a/hub.html
+++ b/hub.html
@@ -62,8 +62,8 @@
             </a>
             <div class="nav-group">
                 <ul class="nav-menu">
-                    <li><a href="hub.html" class="active">vores hub</a></li>
-                    <li><a href="support.html">støtte os</a></li>
+                    <li><a href="hub.html">vores hub</a></li>
+                    <li><span class="">støtte os</span></li>
                     <li><a href="about.html">om os</a></li>
                     <li><a href="contact.html">kontakt</a></li>
                 </ul>
