--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         </a>
         <div class="nav-group">
             <ul class="nav-menu">
-                <li><a href="hub.html">vores hub</a></li>
-                <li><a href="support.html">støtte os</a></li>
-                <li><a href="about.html">om os</a></li>
-                <li><a href="contact.html">kontakt</a></li>
+              <li><a href="hub.html">vores hub</a></li>
+              <li><span class="">støtte os</span></li>
+              <li><a href="about.html">om os</a></li>
+              <li><a href="contact.html">kontakt</a></li>
             </ul>
             <a href="#" class="profile-icon">
                 <img src="assets/profile_w.svg" alt="Profile">
