--- a/about.html
+++ b/about.html
@@ -51,8 +51,8 @@
             <div class="nav-group">
                 <ul class="nav-menu">
                     <li><a href="hub.html">vores hub</a></li>
-                    <li><a href="support.html">støtte os</a></li>
-                    <li><a href="about.html" class="active">om os</a></li>
+                    <li><span class="">støtte os</span></li>
+                    <li><a href="about.html">om os</a></li>
                     <li><a href="contact.html">kontakt</a></li>
                 </ul>
                 <a href="#" class="profile-icon">
